--- a/.github/workflows/conformance-e2e.yaml
+++ b/.github/workflows/conformance-e2e.yaml
@@ -259,7 +259,7 @@ jobs:
           echo params="--xdp --secondary-network \"\" 3 \"\" \"\" ${{ matrix.kube-proxy }} $IP_FAM" >> $GITHUB_OUTPUT
 
       - name: Provision K8s on LVH VM
-        uses: cilium/cilium/.github/actions/lvh-kind@v1.13
+        uses: cilium/cilium/.github/actions/lvh-kind@pr/qmonnet/backport/1.13-ci-ipsec
         with:
           test-name: e2e-conformance
           kernel: ${{ matrix.kernel }}
