--- a/.github/workflows/conformance-ipsec-e2e.yaml
+++ b/.github/workflows/conformance-ipsec-e2e.yaml
@@ -239,7 +239,7 @@ jobs:
           echo params="--xdp --secondary-network \"\" 3 \"\" \"\" ${{ matrix.kube-proxy }} $IP_FAM" >> $GITHUB_OUTPUT
 
       - name: Provision K8s on LVH VM
-        uses: cilium/cilium/.github/actions/lvh-kind@v1.13
+        uses: cilium/cilium/.github/actions/lvh-kind@pr/qmonnet/backport/1.13-ci-ipsec
         with:
           test-name: e2e-conformance
           kernel: ${{ matrix.kernel }}
@@ -278,7 +278,7 @@ jobs:
             --flush-ct
 
       - name: Rotate IPsec Key & Test (${{ join(matrix.*, ', ') }})
-        uses: cilium/cilium/.github/actions/conn-disrupt-test@v1.13
+        uses: cilium/cilium/.github/actions/conn-disrupt-test@pr/qmonnet/backport/1.13-ci-ipsec
         with:
           job-name: conformance-ipsec-e2e-key-rotation-${{ matrix.name }}
           extra-connectivity-test-flags: --test '!check-log-errors'
