--- a/.github/workflows/conformance-eks.yaml
+++ b/.github/workflows/conformance-eks.yaml
@@ -31,6 +31,7 @@ permissions:
   # To be able to set commit status
   statuses: write
 
+# TODO remove me
 concurrency:
   # Structure:
   # - Workflow name
